...
                            contrasena = "1234",
                            rol = "MEDICO"
                        ))
                    }
                    if (usuarioDao.obtenerUsuario("paciente1") == null) {
                        usuarioDao.registrarUsuario(Usuario(
                            nombreCompleto = "Juan Paciente",
                            telefono = "611111111",
                            usuario = "paciente1",
                            contrasena = "1234",
                            rol = "PACIENTE"
                        ))
                    }
...
